# molsim

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
configs/: spec.blocked.yaml  spec.example.yaml
constraints/: chem.txt
data/: registry.json
src/moldis/: __init__.py  cli.py
src/moldis/chem/: rdkit_utils.py
src/moldis/generate/: brics_gen.py  common.py  filters.py  ga_gen.py
src/moldis/geometry/: conformers.py
src/moldis/orchestrator/: pipeline.py  seeds.py
src/moldis/physics/: semi_empirical.py
src/moldis/predict/: datasets.py  features.py  infer.py  linear.py  sklearn_models.py  splits.py
src/moldis/report/: builder.py  calibration.py
src/moldis/safety/: lint.py  request_gate.py
src/moldis/scoring/: objectives.py  pareto.py  selection.py
src/moldis/spec/: models.py
src/moldis/synth/: feasibility.py  high_level_routes.py
src/moldis/utils/: io.py  run.py
tests/: test_sanity.py
tests/chem/: test_rdkit_utils.py
tests/cli/: test_cli_run.py  test_cli_score.py  test_cli_train.py
tests/generate/: test_brics_gen.py  test_filters.py  test_ga_gen.py
tests/geometry/: test_conformers.py
tests/physics/: test_xtb_wrapper.py
tests/predict/: test_esol_dataset_and_infer.py  test_features_and_linear.py  test_sklearn_baseline.py
tests/report/: test_builder_geom.py
tests/safety/: test_request_gate.py
tests/scoring/: test_objectives.py  test_pareto.py
tests/spec/: test_models.py
tests/synth/: test_feasibility.py  test_routes.py
